--- a/style.css
+++ b/style.css
@@ -10,10 +10,22 @@ body {
   font-family: "courier"monospace;
 }
 
+
 canvas {
   margin: auto;
   top: 0;
   left: 0;
   position: absolute;
   z-index: -1;
+}
+
+.reloadButton {
+  padding: 10px;
+  background-color: #a8793e;
+  padding-left: 0;
+  padding-right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  width: 60px;
 }
